--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="resources\style.css" type="text/css" rel="stylesheet" />
     <title>Tea Cozy</title>
   </head>
   <body>
+    <header>
+      hi
+    </header>
 
   </body>
 </html>
