--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <header>
-      hi
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" />
+      </div>
+      <nav>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#featured-teas">Featured Teas</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
     </header>
 
   </body>
