--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Tea Cozy</title>
   </head>
   <body>
+    <!-- Header Content -->
     <header>
+      <!-- Logo Content -->
       <div class="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" />
       </div>
+      <!-- Navigation -->
       <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#featured-teas">Featured Teas</a></span>
