--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <span><a href="#locations">Locations</a></span>
       </nav>
     </header>
+    <!-- Main Content -->
+    <div class="main-mission">
+      <div class="main-box">
+        <div class="text-content">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
