Mission Finish start tea

--- a/index.html
+++ b/index.html
@@ -20,14 +20,40 @@
       </nav>
     </header>
     <!-- Main Content -->
-    <div class="main-mission">
-      <div class="main-box">
-        <div class="text-content">
+    <div class="main">
+      <!-- Mission Content -->
+      <div id="mission" class="main-mission">
+        <div class="mission-content">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
+      <div id="featured-teas" class="main-tea">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        <div class="images">
+          <div class="image">
+            <img src="#" />
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="image">
+            <img src="#" />
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="image">
+            <img src="#" />
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="image">
+            <img src="#" />
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="image">
+            <img src="#" />
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
+        </div>
+      </div>
     </div>
-
   </body>
 </html>
