--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
           <h4>What's Steeping at The Tea Cozy?</h4>
         <div class="images">
           <div class="image">
-            <img src="#" />
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" />
             <h4>Fall Berry Blitz Tea</h4>
           </div>
           <div class="image">
-            <img src="#" />
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" />
             <h4>Spiced Rum Tea</h4>
           </div>
           <div class="image">
-            <img src="#" />
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" />
             <h4>Seasonal Donuts</h4>
           </div>
           <div class="image">
-            <img src="#" />
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" />
             <h4>Myrtle Ave Tea</h4>
           </div>
           <div class="image">
-            <img src="#" />
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" />
             <h4>Bedford Bizarre Tea</h4>
           </div>
         </div>
