--- a/index.html
+++ b/index.html
@@ -54,6 +54,39 @@
           </div>
         </div>
       </div>
+      <div id="locations" class="main-location">
+        <h2>Locations</h2>
+        <div class="location-content">
+
+
+          <div class="squares">
+            <h3>Downtown</h3>
+              <p>384 West 4th St</p>
+              <p>/Suite 108</p>
+              <p>Portland, Maine</p>
+          </div>
+          <div class="squares">
+            <h3>East Bayside</h3>
+              <p>3433 Phisherman's Avenue</p>
+              <p>(Northwest Corner)</p>
+              <p>Portland, Maine</p>
+          </div>
+          <div class="squares">
+            <h3>Oakland</h3>
+              <p>515 Crescent Avenue</p>
+              <p>Second Floor</p>
+              <p>Portland, Maine</p>
+          </div>
+        </div>
+      </div>
     </div>
+    <footer>
+        <h2>The Tea Cozy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+      <div class="copyright">
+        <h5>copyright The Tea Cozy 2017</h5>
+      </div>
+    </footer>
   </body>
 </html>
